HandheldCompanion/libviiper.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package github.com/Alia5/VIIPER/clib */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
extern size_t _GoStringLen(_GoString_ s);
extern const char *_GoStringPtr(_GoString_ s);
#endif

#endif

/* Start of preamble from import "C" comments.  */


#line 3 "fastpath.go"

#include <stdint.h>

#line 1 "cgo-generated-wrapper"

#line 10 "main.go"

#include <stdint.h>
#include <stdlib.h>

typedef void (*viiper_feedback_fn)(uint32_t bus_id, uint32_t device_id, const uint8_t* data, int len, void* user_data);

// Bridge function to call the feedback callback from Go.
static inline void bridge_feedback_fn(viiper_feedback_fn fn, uint32_t bus_id, uint32_t device_id, const uint8_t* data, int len, void* user_data) {
	fn(bus_id, device_id, data, len, user_data);
}

#line 1 "cgo-generated-wrapper"


/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#if !defined(__cplusplus) || _MSVC_LANG <= 201402L
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
#include <complex>
typedef std::complex<float> GoComplex64;
typedef std::complex<double> GoComplex128;
#endif
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif

extern int viiper_device_open_fast(uint32_t busID, uint32_t deviceID, uint32_t* outHandle);
extern int viiper_device_set_input_fast(uint32_t handle, uint8_t* data, int length);
extern int viiper_device_open_x360(uint32_t busID, uint32_t deviceID, uint32_t* outHandle);
extern int viiper_device_set_input_x360(uint32_t handle, uint32_t buttons, uint8_t lt, uint8_t rt, int16_t lx, int16_t ly, int16_t rx, int16_t ry);
extern int viiper_device_open_ds4(uint32_t busID, uint32_t deviceID, uint32_t* outHandle);
extern int viiper_device_set_input_ds4(uint32_t handle, uint8_t* data, int length);
extern void viiper_free_string(char* s);
extern char* viiper_last_error(void);
extern int viiper_init(char* listenAddr);
extern void viiper_shutdown(void);
extern int viiper_bus_create(uint32_t busID);
extern int viiper_bus_remove(uint32_t busID);
extern int viiper_device_add(uint32_t busID, char* typeName, uint32_t* outDeviceID);
extern int viiper_device_add_ex(uint32_t busID, char* typeName, uint16_t vid, uint16_t pid, uint32_t* outDeviceID);
extern int viiper_device_attach(uint32_t busID, uint32_t deviceID);
extern int viiper_device_remove(uint32_t busID, uint32_t deviceID);
extern char* viiper_list_device_types(void);
extern int viiper_device_set_input(uint32_t busID, uint32_t deviceID, uint8_t* data, int length);
extern int viiper_device_set_feedback_callback(uint32_t busID, uint32_t deviceID, viiper_feedback_fn cb, void* userData);

#ifdef __cplusplus
}
#endif